changes limit eat

--- a/philosphers/Makefile
+++ b/philosphers/Makefile
@@ -13,7 +13,7 @@ REMOVE = rm -rf
 all: $(NAME)
 
 $(NAME):
-	$(CC) $(CFLAGS) $(C_FILES) -o $(NAME) -fsanitize=thread
+	$(CC) $(CFLAGS) $(C_FILES) -o $(NAME) -fsanitize=address
 
 clean:
 	$(REMOVE) -f $(O_FILES)
